--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
+    "memfs": "^3.5.0",
     "next": "13.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "swiper": "^9.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "use-local-storage-state": "^18.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
