--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
-    "memfs": "^3.5.0",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -27,8 +29,7 @@
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "swiper": "^9.2.0",
-    "typescript": "5.0.3",
-    "use-local-storage-state": "^18.3.2"
+    "typescript": "5.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
